# betterknob

./: .gitignore  .pre-commit-config.yaml  BetterKnobVolumeMixer.spec  CHANGELOG.md  README.md  TODO  UnscuffedVolumeMixer.spec  build-win.bat  config.ini  hotkeyfinder.spec  keyb.py  keyb.spec  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  volumemixer.spec
.github/workflows/: mypy.yaml  release.yml
src/: config.ini  hotkey_finder.py  keyb.py  requirements-dev.txt  requirements.txt
src/utils/: __init__.py  audio_session_handler.py  com_utils.py  hotkey_handler.py  logger.py  mixer_profile.py  system_audio_handler.py  volume_overlay.py
